# refGuard

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  mock.db  mock.db-shm  mock.db-wal  pyproject.toml  refund-guard-db.sql  requirements.txt  skills-lock.json
backend/: cli_test.py  main.py  refund-policy.md  setup_database.py
backend/agents/: graph.py  nodes.py  prompt.py  state.py
backend/agents/tools/: db.py  eligibility_tools.py  helper.py  llm.py
frontend/: README.md
frontend/src/: AdminDashboard.tsx  App.tsx  CustomerChat.tsx  LoginPage.tsx  api.ts  index.css
